gitignore some files

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@
 Homestead.yaml
 Homestead.json
 .env
-Laravel-AngularJS.sublime-project
-Laravel-AngularJS.sublime-workspace
+**.sublime-project
+**.sublime-workspace
